src/postgres/third-party-extensions/pgrx/pgrx-tests/tests/compile-fail/eq-for-postgres_hash.rs
use pgrx::prelude::*;
use serde::{Serialize, Deserialize};

#[derive(Serialize, Deserialize, PostgresType, PostgresHash)]
pub struct BrokenType {
    int: i32,
}

fn main() {}
